--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,3 +1,11 @@
 $red: #b40000;
+$purple: lighten(#524763, 20%);
 $white: #dfdfdf;
 $black: #1f1f1f;
+$teal: #26bfd4;
+$dark-teal: #207b88;
+$charcoal: #42454a;
+$offwhite: #f6f6f6;
+$blue: #008dff;
+$warning: #922a2a;
+$grey: #8a8a8a;
