--- a/src/style/portfolio-form.scss
+++ b/src/style/portfolio-form.scss
@@ -11,6 +11,10 @@
  
 }
 
+.submit-btn {
+    margin-bottom: 3rem;
+}
+
 .portfolio-submit-btn {
     background: $teal;
     border: 2px solid $dark-teal;
