--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -2,16 +2,23 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 4rem;
+    width: 80%;
+    margin-left: 10%;
 
     .about-img {
         position: relative;
         height: calc(100vh - 9rem);
+        display: flex;
+        justify-content: center;
+            align-items: center;
         
         img {
-            position: absolute;
             right: 0;
             top: 0;
-            height: 100%;
+            height: 60%;
+            border-radius: 1rem;
+            background: radial-gradient(circle, rgba(9,9,121,0) 42%, rgba(31,31,31,1) 100%);
+
         }
     }
 
