--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -12,7 +12,8 @@ html {
     outline: none;
 }
 
-body {
+body,
+html {
     background: $black;
     color: $white;
     overflow-x: hidden;
@@ -28,3 +29,21 @@ body {
     display: grid;
     grid-template-columns: 1fr;
 }
+
+@media only screen and (max-width: 1100px) {
+    body, html {
+      font-size: 9px;
+    }
+  }
+
+@media only screen and (max-width: 900px) {
+    body, html {
+      font-size: 8px;
+    }
+  }
+
+@media only screen and (max-width: 600px) {
+    body, html {
+      font-size: 9px;
+    }
+  }
