--- a/src/style/portfolio-detail.scss
+++ b/src/style/portfolio-detail.scss
@@ -27,6 +27,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 3rem;
 
         .site-link {
             padding: 2rem;
