--- a/src/style/portfolio.scss
+++ b/src/style/portfolio.scss
@@ -69,3 +69,15 @@
 //     transition: .75s ease;
 //     filter: brightness(30%);
 // }
+
+@media only screen and (max-width: 900px) {
+    .portfolio-items-wrapper {
+        grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  @media only screen and (max-width: 700px) {
+      .portfolio-items-wrapper {
+          grid-template-columns: 1fr;
+      }
+    }
